feat: Auth me Swagger tag improvements
